# bright-refresh-bot

./: .dockerignore  .env.example  .gitignore  API_DOCS.md  Dockerfile  Dockerfile.scheduler  README.md  debug_api_response.py  debug_users.py  docker-compose.yml  missing_check.txt  pyproject.toml  railway.toml  requirements.txt  test_html_manual.py  test_payload.py
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: config.yaml
scripts/: docker_entrypoint.sh  setup_scheduler.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  client.py  models.py  vacancy.py
src/services/: __init__.py  processor.py  reporter.py  rollback.py  state.py
src/utils/: __init__.py  html_reconstruct.py  logging.py
tests/: __init__.py  conftest.py  test_models.py  test_processor.py  test_reporter.py  test_rollback.py  test_state.py  test_vacancy_service.py
